--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,15 @@ after_success:
   - docker push bajajsakshi/multi-nginx
   - docker push bajajsakshi/multi-server
   - docker push bajajsakshi/multi-worker
+
+  deploy:
+    provider: elasticbeanstalk
+    region: 'us-east-1'
+    app: 'multi-docker'
+    env: 'Multi-docker-env'
+    bucket_name: 'elasticbeanstalk-us-east-1-706176826497'
+    bucket_path: 'docker-multi'
+    on:
+      branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
